Consolidate mobile specific npm scripts.

--- a/test-apps/display-test-app/ios/imodeljs-test-app/Config.xcconfig
+++ b/test-apps/display-test-app/ios/imodeljs-test-app/Config.xcconfig
@@ -8,6 +8,7 @@
 
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
-AssetRoot = $(PROJECT_DIR)/../../lib/ios/
+FrontEndPath = $(PROJECT_DIR)/../../build/
+BackEndPath = $(PROJECT_DIR)/../../lib/mobile/
 BuildArchitecture = iOSARM64
 IOSARCH = arm64
