--- a/test-apps/display-test-app/android/imodeljs-test-app/app/build.gradle
+++ b/test-apps/display-test-app/android/imodeljs-test-app/app/build.gradle
@@ -44,3 +44,6 @@ dependencies {
     implementation 'com.github.itwin:mobile-native-android:3.5.6'
     implementation 'androidx.webkit:webkit:1.5.0'
 }
+
+apply from: 'copyAssets.gradle'
+preBuild.dependsOn "copyAssets"
