use checkout none in some jobs

--- a/common/config/azure-pipelines/jobs/docs/deploy-docs.yaml
+++ b/common/config/azure-pipelines/jobs/docs/deploy-docs.yaml
@@ -11,6 +11,8 @@ jobs:
     - group: ${{ parameters.variableGroup }}
 
   steps:
+    - checkout: none
+
     - script: |
         echo * * * * * * * * * *
         echo * * * * * * * * * * Definition: $(Build.DefinitionName)($(System.DefinitionId))
