remove implicit checkout where not needed

--- a/common/config/azure-pipelines/jobs/docs/docs-scorecard.yaml
+++ b/common/config/azure-pipelines/jobs/docs/docs-scorecard.yaml
@@ -27,6 +27,7 @@ jobs:
   variables:
     - group: iTwin.js Docs - Scorecard
   steps:
+  - checkout: none
   - template: templates/scorecard/scorecard-common-validators.yaml@build-pipeline-scripts
     parameters:
       gprId: $(GprId)
