--- a/test-apps/display-test-app/android/imodeljs-test-app/app/copyAssets.gradle
+++ b/test-apps/display-test-app/android/imodeljs-test-app/app/copyAssets.gradle
@@ -24,14 +24,14 @@ task copyAssets {
         def assetsDir = "${rootDir}/app/src/main/assets"
         println "assetsDir ${new File(assetsDir).canonicalPath}"
 
-        Map foldersToCopy = [
+        Map itemsToCopy = [
                 "${dtaDir}/lib/mobile/main.js": "${assetsDir}/backend",
                 "${dtaDir}/lib/mobile/assets": "${assetsDir}/backend/Assets",
                 "${dtaDir}/build": "${assetsDir}/frontend",
                 "${assetsDir}/frontend/locales/en": "${assetsDir}/frontend/locales/en-US"
         ]
 
-        for (def entry in foldersToCopy) {
+        for (def entry in itemsToCopy) {
             def srcPath = Paths.get(entry.key)
             def destDir = Paths.get(entry.value)
 
