--- a/common/config/azure-pipelines/templates/gather-docs.yaml
+++ b/common/config/azure-pipelines/templates/gather-docs.yaml
@@ -77,7 +77,6 @@ steps:
       project: '2c48216e-e72f-48b4-a4eb-40ff1c04e8e4'
       definition: 7436 # iTwin.js/Docs/iTwin.js Docs - YAML
       allowPartiallySucceededBuilds: true
-      buildVersionToDownload: latestFromBranch
-      runBranch: refs/heads/master
+      buildVersionToDownload: latest
       artifactName: .updated.json
       targetPath: ${{ parameters.stagingDir }}/config/
