ignore missing react peer dep for dta and dpta

--- a/common/config/rush/pnpm-config.json
+++ b/common/config/rush/pnpm-config.json
@@ -15,5 +15,14 @@
       "react": "17",
       "react-dom": "17"
     }
+  },
+  "globalPackageExtensions": {
+    "@bentley/react-scripts": {
+      "peerDependenciesMeta": {
+        "react": {
+          "optional": true
+        }
+      }
+    }
   }
 }
