--- a/common/config/azure-pipelines/jobs/fast-ci.yaml
+++ b/common/config/azure-pipelines/jobs/fast-ci.yaml
@@ -9,6 +9,8 @@ variables:
   - group: Rush Build Cache SAS Token
   - name: shouldWriteToCache
     value: ${{ and(eq(variables['Agent.OS'], 'Linux'), in(variables['Build.Reason'], 'IndividualCI', 'Manual')) }}
+  - name: ios
+    value: ${{ eq(variables['Agent.OS'], 'Darwin') }}
 
 pr:
   autoCancel: true
@@ -35,17 +37,14 @@ jobs:
         OS: windows-latest
         platform: Windows_NT
         name: $(win_pool)
-        ios: false
       "Linux_Node_18":
         OS: ubuntu-latest
         platform: Linux
         name: $(linux_pool)
-        ios: false
       "MacOS_Node_18":
         OS: macOS-latest
         platform: Darwin
         name: $(mac_pool)
-        ios: true
 
   pool:
     name: $(name)
