--- a/common/config/azure-pipelines/jobs/fast-ci.yaml
+++ b/common/config/azure-pipelines/jobs/fast-ci.yaml
@@ -10,6 +10,7 @@ variables:
   - name: shouldWriteToCache
     value: ${{ and(eq(variables['Agent.OS'], 'Linux'), in(variables['Build.Reason'], 'IndividualCI', 'Manual')) }}
   - name: ios
+    type: boolean
     value: ${{ eq(variables['Agent.OS'], 'Darwin') }}
 
 pr:
@@ -65,7 +66,7 @@ jobs:
   - template: ../templates/core-build.yaml
     parameters:
       nodeVersion: 18.12.x
-      buildIos: $(ios)
+      buildIos: ${{ eq(variables['Agent.OS'], 'Darwin') }}
   # Will run if even there is a failure somewhere else in the pipeline.
   - template: ../templates/publish-test-results.yaml
     parameters:
