--- a/common/config/azure-pipelines/jobs/docs/docs-scorecard.yaml
+++ b/common/config/azure-pipelines/jobs/docs/docs-scorecard.yaml
@@ -29,9 +29,10 @@ jobs:
   - checkout: none
   - template: templates/scorecard/scorecard-common-validators.yaml@build-pipeline-scripts
     parameters:
-      gprId: $(GprId)
       shortCode: $(ShortCode)
-      isBackendOrAgent: false
+  - template: templates/scorecard/scorecard-static-validators.yaml@build-pipeline-scripts
+    parameters:
+      shortCode: $(ShortCode)
       appInsightsService: BentleyConnect QA
       octopusProjectId: $(OctopusProjectId)
       sloSqlServerName: $(SloSqlServerName)
