--- a/common/config/azure-pipelines/templates/gather-docs.yaml
+++ b/common/config/azure-pipelines/templates/gather-docs.yaml
@@ -43,7 +43,8 @@ steps:
       buildType: specific
       project: 2c48216e-e72f-48b4-a4eb-40ff1c04e8e4
       pipeline: 6075
-      buildVersionToDownload: latest
+      buildVersionToDownload: latestFromBranch
+      branchName: refs/heads/master
       allowPartiallySucceededBuilds: true
       artifactName: Bis Docs
     condition: and(succeeded(), eq('${{ parameters.downloadCurrentBuildArtifacts }}', false))
