--- a/common/config/azure-pipelines/jobs/docs/docs-scorecard.yaml
+++ b/common/config/azure-pipelines/jobs/docs/docs-scorecard.yaml
@@ -29,10 +29,9 @@ jobs:
   - checkout: none
   - template: templates/scorecard/scorecard-common-validators.yaml@build-pipeline-scripts
     parameters:
+      gprId: $(GprId)
       shortCode: $(ShortCode)
-  - template: templates/scorecard/scorecard-static-validators.yaml@build-pipeline-scripts
-    parameters:
-      shortCode: $(ShortCode)
+      isBackendOrAgent: false
       appInsightsService: BentleyConnect QA
       octopusProjectId: $(OctopusProjectId)
       sloSqlServerName: $(SloSqlServerName)
