--- a/common/config/azure-pipelines/jobs/docs-ci.yaml
+++ b/common/config/azure-pipelines/jobs/docs-ci.yaml
@@ -23,7 +23,8 @@ pr:
       - .github/CODEOWNERS
 
 jobs:
-- template: ./docs/docs-build.yaml
+- template: ./docs-build.yaml
   parameters:
     workingDir: $(Pipeline.Workspace)/itwinjs-core
     outputDir: $(Agent.BuildDirectory)/tempDocsBuild/public_build
+    shouldPublish: and(eq(variables['Build.Reason'], 'IndividualCI'), or(eq(variables['Build.SourceBranch'], 'refs/heads/master'), startsWith(variables['Build.SourceBranch'], 'refs/heads/release')))
