iTwin.js Docs Release Pipeline (#4681)
* WIP docs pipeline

* wip docs nuget packaging

* disable extra stages

* debug env var

* Fix BuildNumber val

* add 3 fields to job name

* set tempDocsLocation variable

* move tempDocsLocation to parameter

* move tempDocsLocation to job level variable

* Refactor docs build as job tempate

* Fix path in cd-docs

* Fix path

* fix job template formatting

* fix condition to publish step

* fix paramter expression

* add debug tasks

* debug nuspec

* add build vars for nuget

* use backslash in tempDocsLocation variable

* Split out nuget packaging into two jobs

* Use correct docs pipeline

* Add deployment and product tests

* lock down artifact version is release pipeline

* fix job parameter

* comment out failing demand

* fix job names

* fix job names

* update nupkg path

* update pack destination

* fix paths in nuget

* fix product tests paths

* set build numbers to itwin versions

* convert to batch script

* clean script

* tag build manually

* Fix build number in release pipeline

* map build number into environment

* hardcode artifact version

* fix build name

* write package_ver to file in docs build

* fix workingdir parameter

* fix workingdir in python task

* insert output dir

* move python script to file

* set python interpreter

* set python version

* use windows-latest build machine

* switch agent pool

* fix pool formatting

* target correct vmImage

* revert pool changes

* use popen instead of run in python script

* remove undefined exception type

* remove bad argument

* check for 404 in py script

* use shell=true

* add back artifact publishing

* fix paths in gather-docs

* handle robocopy exit code correctly

* handle each robocopy case

* use version number from file

* fix syntax error in py script

* fix path for version file

* fix path for version file


--- a/common/config/azure-pipelines/templates/gather-docs.yaml
+++ b/common/config/azure-pipelines/templates/gather-docs.yaml
@@ -14,25 +14,27 @@ parameters:
 
 steps:
   - script: |
-      mkdir ${{ parameters.stagingDir }}/reference/
+      mkdir ${{ parameters.stagingDir }}\reference\
       echo Copying all reference files to staging
-      robocopy /E generated-docs/core/ ${{ parameters.stagingDir }}/reference/
-      robocopy /E generated-docs/ui/ ${{ parameters.stagingDir }}/reference/
-      robocopy /E generated-docs/presentation/ ${{ parameters.stagingDir }}/reference/
-      robocopy /E generated-docs/domains/ ${{ parameters.stagingDir }}/reference/
+      robocopy /E generated-docs\core\ ${{ parameters.stagingDir }}\reference\
+      if %errorlevel% GEQ 8 exit 1
+      robocopy /E generated-docs\ui\ ${{ parameters.stagingDir }}\reference\
+      if %errorlevel% GEQ 8 exit 1
+      robocopy /E generated-docs\presentation\ ${{ parameters.stagingDir }}\reference\
+      if %errorlevel% GEQ 8 exit 1
+      robocopy /E generated-docs\domains\ ${{ parameters.stagingDir }}\reference\
+      if %errorlevel% GEQ 8 exit 1
       echo Copying extracted code to staging
-      mkdir ${{ parameters.stagingDir }}/extract/
-      robocopy /E generated-docs/extract/ ${{ parameters.stagingDir }}/extract/
+      mkdir ${{ parameters.stagingDir }}\extract\
+      robocopy /E generated-docs\extract\ ${{ parameters.stagingDir }}\extract\
+      if %errorlevel% GEQ 8 exit 1
+
       echo Copying all files from \docs folder
-      robocopy /E docs/ ${{ parameters.stagingDir }}/
+      robocopy /E docs\ ${{ parameters.stagingDir }}\
+      if %errorlevel% GEQ 8 exit 1
+      exit 0
     workingDirectory: ${{ parameters.workingDir }}
     displayName: Copy Reference files to Staging
-    failOnStderr: false
-    continueOnError: true
-
-  - script: dir /S
-    workingDirectory: ${{ parameters.stagingDir }}
-    displayName: Log files
 
   # BIS Docs are pulled from a separate internal build
   - task: DownloadBuildArtifacts@0
@@ -69,8 +71,9 @@ steps:
     inputs:
       buildType: specific
       project: '2c48216e-e72f-48b4-a4eb-40ff1c04e8e4'
-      definition: 1734
+      definition: 7436 # iTwin.js/Docs/iTwin.js Docs - YAML
       allowPartiallySucceededBuilds: true
       buildVersionToDownload: latestFromBranch
+      branchName: refs/heads/master
       artifactName: .updated.json
       targetPath: ${{ parameters.stagingDir }}/config/
