--- a/common/config/azure-pipelines/jobs/docs-ci.yaml
+++ b/common/config/azure-pipelines/jobs/docs-ci.yaml
@@ -23,35 +23,8 @@ pr:
       - .github/CODEOWNERS
 
 jobs:
-  - job:
-    workspace:
-      clean: all
-    pool:
-      name: iModelTechCI
-      demands: Agent.OS -equals Windows_NT
-
-    steps:
-      - checkout: self
-        path: itwinjs-core
-        clean: true
-
-      - task: NodeTool@0
-        displayName: Use Node 14
-        inputs:
-          versionSpec: 14.17.4
-          checkLatest: true
-
-      - script: |
-          git config --local user.email imodeljs-admin@users.noreply.github.com
-          git config --local user.name imodeljs-admin
-        displayName: Setup git config
-
-      - template: ../templates/docs-build.yaml
-        parameters:
-          workingDir: $(Pipeline.Workspace)/itwinjs-core
-          outputDir: $(Agent.BuildDirectory)/tempDocsBuild/public_build
-
-      - publish: $(Agent.BuildDirectory)/tempDocsBuild/
-        artifact: DocsBuild
-        displayName: Publish Pipeline Artifact - DocsBuild
-        condition: and(succeeded(), or(eq(variables['Build.SourceBranch'], 'refs/heads/master'), startsWith(variables['Build.SourceBranch'], 'refs/heads/release')))
+- template: ./docs-build.yaml
+  parameters:
+    workingDir: $(Pipeline.Workspace)/itwinjs-core
+    outputDir: $(Agent.BuildDirectory)/tempDocsBuild/public_build
+    shouldPublish: ${{ and(eq(variables['Build.Reason'], 'IndividualCI'), or(eq(variables['Build.SourceBranch'], 'refs/heads/master'), startsWith(variables['Build.SourceBranch'], 'refs/heads/release'))) }}
