--- a/tools/certa/package.json
+++ b/tools/certa/package.json
@@ -52,7 +52,7 @@
     "@types/node": "18.11.5",
     "@types/uuid": "^7.0.2",
     "@types/yargs": "^17.0.10",
-    "electron": "^22.0.0-beta.1",
+    "electron": "^22.0.0",
     "eslint": "^7.11.0",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
