--- a/common/config/azure-pipelines/integration-pr-validation.yaml
+++ b/common/config/azure-pipelines/integration-pr-validation.yaml
@@ -24,7 +24,7 @@ variables:
 jobs:
   - job: Integration_Tests_PR_Validation
     pool:
-      vmImage: ubuntu-latest
+      vmImage: ubuntu-20.04
     steps:
       - template: templates/integration-test-steps.yaml
         parameters:
