--- a/common/config/azure-pipelines/integration-validation.yaml
+++ b/common/config/azure-pipelines/integration-validation.yaml
@@ -21,39 +21,39 @@ jobs:
   - job: Integration_Tests_Full
     strategy:
       matrix:
-        Linux_1804:
-          imageName: ubuntu-18.04
-          nodeVersion: 14.x
-        Linux_2004:
+        Linux_node_12_7:
+          imageName: ubuntu-latest20.04
+          nodeVersion: 12.17.0
+        Linux_node_12_x:
+          imageName: ubuntu-20.04
+          nodeVersion: 12.x
+        Linux_node_14_x:
           imageName: ubuntu-20.04
           nodeVersion: 14.x
-        Linux_2204:
-          imageName: ubuntu-22.04
-          nodeVersion: 14.x
         # linux_node_16_x:
-        #   imageName: ubuntu-latest
+        #   imageName: ubuntu-20.04
         #   nodeVersion: 16.x
-        # Windows_node_12_7:
-        #   imageName: windows-latest
-        #   nodeVersion: 12.17.0
-        # Windows_node_12_x:
-        #   imageName: windows-latest
-        #   nodeVersion: 12.x
-        # Windows_node_14_x:
-        #   imageName: windows-latest
-        #   nodeVersion: 14.x
+        Windows_node_12_7:
+          imageName: windows-latest
+          nodeVersion: 12.17.0
+        Windows_node_12_x:
+          imageName: windows-latest
+          nodeVersion: 12.x
+        Windows_node_14_x:
+          imageName: windows-latest
+          nodeVersion: 14.x
         # Windows_node_16_x:
         #   imageName: windows-latest
         #   nodeVersion: 16.x
-        # MacOS_node_12_7:
-        #   imageName: macos-latest
-        #   nodeVersion: 12.17.0
-        # MacOS_node_12_x:
-        #   imageName: macos-latest
-        #   nodeVersion: 12.x
-        # MacOS_node_14_x:
-        #   imageName: macos-latest
-        #   nodeVersion: 14.x
+        MacOS_node_12_7:
+          imageName: macos-latest
+          nodeVersion: 12.17.0
+        MacOS_node_12_x:
+          imageName: macos-latest
+          nodeVersion: 12.x
+        MacOS_node_14_x:
+          imageName: macos-latest
+          nodeVersion: 14.x
         # MacOS_node_16_x:
         #   imageName: macos-latest
         #   nodeVersion: 16.x
