--- a/common/config/azure-pipelines/jobs/docs-build.yaml
+++ b/common/config/azure-pipelines/jobs/docs-build.yaml
@@ -66,7 +66,7 @@ jobs:
           downloadCurrentBuildArtifacts: ${{ parameters.downloadCurrentBuildArtifacts }}
 
       # Currently BeMetalsmith is an internal only tool
-      - script: npm install @bentley/bemetalsmith@4.x
+      - script: npm install @bentley/bemetalsmith@4.2.42-alpha.0
         displayName: Install BeMetalsmith
         workingDirectory: ${{ parameters.workingDir }}
 
