Support external docs builds (#4752)
* add self referential repository resource

* use checkout parameter

--- a/common/config/azure-pipelines/jobs/docs-build.yaml
+++ b/common/config/azure-pipelines/jobs/docs-build.yaml
@@ -2,6 +2,9 @@
 # and running a step to combine everything.
 
 parameters:
+  - name: checkout
+    type: string
+    default: self
   - name: workingDir
     type: string
     default: $(Pipeline.Workspace)/itwinjs-core
@@ -27,7 +30,7 @@ jobs:
       demands: Agent.OS -equals Windows_NT
 
     steps:
-      - checkout: self
+      - checkout: ${{ parameters.checkout }}
         path: itwinjs-core
         clean: true
 
