--- a/core/frontend/package.json
+++ b/core/frontend/package.json
@@ -104,9 +104,9 @@
     "deep-assign": "^2.0.0",
     "fuse.js": "^3.3.0",
     "lodash": "^4.17.10",
-    "qs": "^6.5.1",
+    "qs": "^6.5.3",
     "semver": "^7.3.5",
-    "superagent": "7.1.3",
+    "superagent": "^7.1.5",
     "wms-capabilities": "0.4.0",
     "xml-js": "~1.6.11",
     "reflect-metadata": "0.1.13"
