--- a/core/mobile/package.json
+++ b/core/mobile/package.json
@@ -42,8 +42,8 @@
     "deep-assign": "^2.0.0",
     "lodash": "^4.17.10",
     "js-base64": "^3.6.1",
-    "qs": "^6.5.1",
-    "superagent": "7.1.3",
+    "qs": "^6.5.3",
+    "superagent": "^7.1.5",
     "ws": "^7.5.3"
   },
   "devDependencies": {
