--- a/common/config/azure-pipelines/jobs/docs-build.yaml
+++ b/common/config/azure-pipelines/jobs/docs-build.yaml
@@ -14,12 +14,21 @@ parameters:
   - name: outputDir
     type: string
     default: $(Pipeline.Workspace)/tempDocsBuild
-  - name: downloadCurrentBuildArtifacts
+  - name: useCurrentBisDocsArtifact
     type: boolean
     default: false
   - name: shouldPublish
     type: boolean
     default: false
+
+resources:
+  pipelines:
+  - pipeline: itwinjs-docs
+    source: iTwin.js/Docs/iTwin.js Docs - YAML
+    branch: master
+  - pipeline: bis-docs
+    source: BIS/Generate-Schema-Markdown-(GitHub)
+    branch: master
 
 jobs:
   - job:
@@ -61,12 +70,63 @@ jobs:
         displayName: rush docs
         workingDirectory: ${{ parameters.workingDir }}
 
-      # Gathers all the pieces to run BeMetalsmith
-      - template: ../templates/gather-docs.yaml
-        parameters:
-          workingDir: ${{ parameters.workingDir }}
-          stagingDir: ${{ parameters.stagingDir }}
-          downloadCurrentBuildArtifacts: ${{ parameters.downloadCurrentBuildArtifacts }}
+      # Gather all the pieces to run BeMetalsmith
+      - script: |
+          mkdir ${{ parameters.stagingDir }}\reference\
+          echo Copying all reference files to staging
+          robocopy /E generated-docs\core\ ${{ parameters.stagingDir }}\reference\
+          if %errorlevel% GEQ 8 exit 1
+          robocopy /E generated-docs\ui\ ${{ parameters.stagingDir }}\reference\
+          if %errorlevel% GEQ 8 exit 1
+          robocopy /E generated-docs\presentation\ ${{ parameters.stagingDir }}\reference\
+          if %errorlevel% GEQ 8 exit 1
+          robocopy /E generated-docs\domains\ ${{ parameters.stagingDir }}\reference\
+          if %errorlevel% GEQ 8 exit 1
+          echo Copying extracted code to staging
+          mkdir ${{ parameters.stagingDir }}\extract\
+          robocopy /E generated-docs\extract\ ${{ parameters.stagingDir }}\extract\
+          if %errorlevel% GEQ 8 exit 1
+
+          echo Copying all files from \docs folder
+          robocopy /E docs\ ${{ parameters.stagingDir }}\
+          if %errorlevel% GEQ 8 exit 1
+          exit 0
+        workingDirectory: ${{ parameters.workingDir }}
+        displayName: Copy Reference files to Staging
+
+      # Download bis docs artifact
+      - {{ if parameters.useCurrentBisDocsArtifact )}}:
+        - download: current
+          artifact: Bis Docs
+          displayName: Download Bis Docs Artifact
+
+        - task: CopyFiles@2
+          displayName: Copy Bis Docs to staging
+          inputs:
+            SourceFolder: $(Pipeline.Workspace)/Bis Docs
+            TargetFolder: ${{ parameters.stagingDir }}/bis/domains/
+
+      - {{ else }}:
+        - download: bis-docs
+          artifact: Bis Docs
+          displayName: Download Bis Docs Artifact
+
+        - task: CopyFiles@2
+          displayName: Copy Bis Docs to staging
+          inputs:
+            SourceFolder: "$(Pipeline.Workspace)/bis-docs/Bis Docs"
+            TargetFolder: ${{ parameters.stagingDir }}/bis/domains/
+
+      # The .updated.json is cached to track when the docs were last updated
+      - download: itwinjs-docs
+        artifact: .updated.json
+        name: Download .updated.json
+
+      - task: CopyFiles@2
+        displayName: Copy .updated.json to staging
+        inputs:
+          SourceFolder: "$(Pipeline.Workspace)/itwinjs-docs/.updated.json"
+          TargetFolder: ${{ parameters.stagingDir }}/config/
 
       # Currently BeMetalsmith is an internal only tool
       - script: npm install @bentley/bemetalsmith@4.x
@@ -80,12 +140,12 @@ jobs:
       # Update the .updated.json file after the bmsBuild
       - publish: ${{ parameters.stagingDir }}/config/.updated.json
         artifact: .updated.json
-        displayName: Publish Pipeline Artifact - .updated.json
+        displayName: Publish .updated.json
         condition: and(succeeded(), eq('${{ parameters.downloadCurrentBuildArtifacts }}', false))
 
       - publish: ${{ parameters.outputDir }}
         artifact: DocsBuild
-        displayName: Publish Pipeline Artifact - DocsBuild
+        displayName: Publish DocsBuild
         condition: and(succeeded(), eq('${{ parameters.shouldPublish }}', true))
 
       - powershell: |
